# fat32-raw

./: .gitignore  Cargo.toml  README.md  README.ru.md
.github/workflows/: rust.yml
src/: error.rs  fat32.rs  lib.rs  main.rs
src/fat32/: directory.rs  fat_table.rs  file.rs  lfn.rs  mod.rs  utils.rs  volume.rs
src/platform/: mod.rs
src/platform/unix/: esp.rs  mod.rs
src/platform/windows/: esp.rs  io.rs  mod.rs  privileges.rs  volume.rs
tests/: explicit_device_test.rs  real_esp_test.rs
