[package]
name = "fat32-raw"
version = "0.2.0"
edition = "2024"
authors = ["DIMFLIX <dimflix.official@gmail.com>"]
description = "Lightweight and safe Rust library for working with FAT32 partitions and images"
license = "GPL-3.0-or-later"
repository = "https://github.com/meowrch/fat32-raw"
readme = "README.md"
keywords = ["fat32", "filesystem", "esp", "rust", "raw"]
categories = ["filesystem"]
homepage = "https://github.com/meowrch/fat32-raw"

[lib]
name = "fat32_raw"
path = "src/lib.rs"
